Replaced remaining usages of Event.forceDelete with Event.tryDelete.