@@ -12,7 +12,6 @@ import org.sosy_lab.common.configuration.Configuration;
 import org.sosy_lab.common.configuration.InvalidConfigurationException;
 
 import java.util.Set;
-import java.util.stream.Collectors;
 
 
 /**
@@ -55,11 +54,11 @@ public class SymmetryReduction implements ProgramProcessor {
 
             rep.setName(rep.getName() + "__symm_unique");
 
-            for (Thread t : c.stream().filter(x -> x != rep).collect(Collectors.toList())) {
+            for (Thread t : c.stream().filter(x -> x != rep).toList()) {
                 for (Event e : t.getEvents()) {
                     if (e.hasTag(Tag.ASSERTION)) {
-                        e.getSuccessor().forceDelete();
-                        e.forceDelete();
+                        e.getSuccessor().tryDelete();
+                        e.tryDelete();
                     }
                 }
             }
